# football-data-api

./: .env.example  README.md  api_client.py  app.py  config.py  football-data-api.py  io_handler.py  main.py  processor.py  pyproject.toml  visualizer.py
output/: Real Madrid CF_statistics.csv  Real Madrid CF_statistics.json  football_teams.csv  football_teams.json  league_standing.csv  league_standing.json  results_of_matches.csv  results_of_matches.json
